@@ -154,7 +154,7 @@ A footnote.
 
 
 
-</div><p><strong>Text 1:  An example of float caption<small class="enddots">...</small>
+</div><p><strong>Text 1: An example of float caption<small class="enddots">...</small>
 An example.
 </strong></p><table><tr><td>&nbsp;</td><td><pre class="example"><strong>example
 </strong></pre></td></tr></table>
@@ -279,7 +279,7 @@ A footnote.
 </p>
 
 
-</div><p><strong>Text 1.2:  An example of float caption<small class="enddots">...</small> 2
+</div><p><strong>Text 1.2: An example of float caption<small class="enddots">...</small> 2
 An example 2.
 </strong></p><table><tr><td>&nbsp;</td><td><pre class="example"><strong>example 2
 </strong></pre></td></tr></table>
@@ -531,9 +531,9 @@ A footnote 2.
 <a name="list-of-floats-1"></a>
 <h1 class="unnumbered">list of floats</h1>
 
-<p>See <a href="#text-in-section">text in section</a>.
-And (see <a href="#text-in-chapter">text in chapter</a>).
-See <a href="#text-with-a-lot-of-features">text with a lot of features</a>.
+<p>See <a href="#text-in-section">Text 1.3</a>.
+And (see <a href="#text-in-chapter">Text 1.1</a>).
+See <a href="#text-with-a-lot-of-features">Text 1</a>.
 </p>
 <p>And now a ref (without manual or printed manual) 
 <a href="#text-with-a-lot-of-features">title</a>.
@@ -544,7 +544,7 @@ See <a href="#text-with-a-lot-of-features">text with a lot of features</a>.
 <p>And now a ref (without manual with a printed manual) 
 section &lsquo;title&rsquo; in <cite>printed manual title</cite>.
 </p>
-<p>A ref to float without type <a href="#label-but-no-type">label but no type</a>.
+<p>A ref to float without type <a href="#label-but-no-type">1</a>.
 </p>
 <dl class="listoffloats">
 <dt><a href="#text-with-a-lot-of-features">Text 1</a></dt><dd><p>TeX and <em><b>t&eacute;&icirc;</b><a href="an_url">an_url</a></em> <small>AND</small> <tt>it is @verb</tt> &nbsp;a word !@ &AElig;.
