@@ -113,7 +113,7 @@ make should then pass the language type with a
 <code>--lang <var>lang</var></code> command
 line switch when calling the cmz directives preprocessor.
 With make, the convention is to have &lsquo;<samp>cm</samp>&rsquo; added before the normal
-file suffix and after the &lsquo;<samp>.</samp>&rsquo;. The table <a href="Programming-with-cmz-directives.html#tab_003acmfile_005fsuffix">tab:cmfile_suffix</a>
+file suffix and after the &lsquo;<samp>.</samp>&rsquo;. The table <a href="Programming-with-cmz-directives.html#tab_003acmfile_005fsuffix">table 3.2</a>
 shows the matching between suffixes, file type and file language.
 </p>
 <p>For example, a file beginning with
