@@ -1888,7 +1888,7 @@ an alert, positive for a very serious error. The precise value determines
 where the error occured.
 <var>info</var> is an integer holding more precise information about the
 error. It is usually the information value from lapack.
-The precise meaning of these error codes is in <a href="#tab_003aerror_005fcodes">tab:error_codes</a>.
+The precise meaning of these error codes is in <a href="#tab_003aerror_005fcodes">table 3.1</a>.
 </p></dd></dl>
 
 <div class="float"><a name="tab_003aerror_005fcodes"></a>
@@ -2560,7 +2560,7 @@ hyperbolic tangent function of <SPAN CLASS="MATH"><IMG
  SRC="mini_ker_40.png"
  ALT="$x/\Delta$"></SPAN>, 
 normalised from 0 to 1, with a maximum slope
-of 2.5, see figure <a href="#heavy">heavy</a>.
+of 2.5, see figure <a href="#heavy">Figure 3.1</a>.
 </p>
 <div class="float"><a name="heavy"></a>
 <img src="heavyside.jpg" alt="heavyside">
@@ -3116,7 +3116,7 @@ by &lsquo;<samp>:</samp>&rsquo;.
 </p>
 <p>Rules for preprocessing of the files are defined in the file 
 &lsquo;<tt>Makefile.miniker</tt>&rsquo; for the file types described in 
-<a href="#tab_003acmfile_005fsuffix">tab:cmfile_suffix</a>:
+<a href="#tab_003acmfile_005fsuffix">table 3.2</a>:
 </p>
 <div class="float"><a name="tab_003acmfile_005fsuffix"></a>
 <table>
@@ -6310,7 +6310,7 @@ make should then pass the language type with a
 <code>--lang <var>lang</var></code> command
 line switch when calling the cmz directives preprocessor.
 With make, the convention is to have &lsquo;<samp>cm</samp>&rsquo; added before the normal
-file suffix and after the &lsquo;<samp>.</samp>&rsquo;. The table <a href="#tab_003acmfile_005fsuffix">tab:cmfile_suffix</a>
+file suffix and after the &lsquo;<samp>.</samp>&rsquo;. The table <a href="#tab_003acmfile_005fsuffix">table 3.2</a>
 shows the matching between suffixes, file type and file language.
 </p>
 <p>For example, a file beginning with
